add templte styling

--- a/ratings/templates/rate.html
+++ b/ratings/templates/rate.html
@@ -78,83 +78,21 @@
 
 
   <!-- Header -->
-  <!-- <header class="masthead d-flex">
+ <header class="masthead d-flex">
         <div class="container text-center my-auto">
-          <h1 class="mb-1">Stylish Portfolio</h1>
+          <h1 class="mb-1">Rate successful</h1>
           <h3 class="mb-5">
-            <em>A Free Bootstrap Theme by Start Bootstrap</em>
+        
           </h3>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="{%url 'home'%}">Go Back Home</a>
         </div>
         <div class="overlay"></div>
       </header>
-   -->
+   
 
     <!-- About -->
-    <header class="masthead " id="about">
-        <div class="container text-center my-auto">
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <div>
-                        <img src="{{project.image.url}}" alt="image" height="80%;" width="70%;">
-                    </div>
-                    <h2>Posted:{{project.pub_date}} by {{project.editor.username}}</h2>
-
-                    <h2>Title:{{project.title}}</h2>
-                    <h2>Description:{{project.description|safe}}This project can be viewed at
-                        <a href="">{{project.link}}</a>.</h2>
-                        <br>
-                    <a class="btn btn-dark btn-xl js-scroll-trigger" href="{% url 'displayprofile' project.editor.id %}">View Editor Profile</a>
-                    <form style="box-shadow: 3px 3px 3px 3px black; " id="rate" action="{%url 'rate' %}" method='post'
-                    enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <h2>Rate the Project</h2>
-                    <p>Design:</p>
-                    <input type="radio" name="design" value="1">1
-                    <input type="radio" name="design" value="2">2
-                    <input type="radio" name="design" value="3">3
-                    <input type="radio" name="design" value="4">4
-                    <input type="radio" name="design" value="5">5
-                    <input type="radio" name="design" value="6">6
-                    <input type="radio" name="design" value="7">7
-                    <input type="radio" name="design" value="8">8
-                    <input type="radio" name="design" value="9">9
-                    <input type="radio" name="design" value="10">10
-            
-            
-                    <p>Usability:</p>
-                    <input type="radio" name="usability" value="1">1
-                    <input type="radio" name="usability" value="2">2
-                    <input type="radio" name="usability" value="3">3
-                    <input type="radio" name="usability" value="4">4
-                    <input type="radio" name="usability" value="5">5
-                    <input type="radio" name="usability" value="6">6
-                    <input type="radio" name="usability" value="7">7
-                    <input type="radio" name="usability" value="8">8
-                    <input type="radio" name="usability" value="9">9
-                    <input type="radio" name="usability" value="10">10
-            
-                    <p>Content:</p>
-                    <input type="radio" name="content" value="1">1
-                    <input type="radio" name="content" value="2">2
-                    <input type="radio" name="content" value="3">3
-                    <input type="radio" name="content" value="4">4
-                    <input type="radio" name="content" value="5">5
-                    <input type="radio" name="content" value="6">6
-                    <input type="radio" name="content" value="7">7
-                    <input type="radio" name="content" value="8">8
-                    <input type="radio" name="content" value="9">9
-                    <input type="radio" name="content" value="10">10
-            
-                    <input type="submit" class="btn btn-outline-danger" value="Rate" href="#">
-                </form>
-                </div>
-
-                </div>
-                
-            </div>
-        
-    </header>
+   
+    
 
 
 
