--- a/ratings/templates/new_project.html
+++ b/ratings/templates/new_project.html
@@ -1,46 +1,147 @@
-{% load bootstrap4%}
-{%load static%}
 
+{%load bootstrap4%}
+{%load static%}
 {{block.super}}
 {%block content%}
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
   <title>New Image</title>
   {{form.media}}
 
-{% block styles %} 
-{% bootstrap_css %}
- 
-   {% endblock %}
+  {% block styles %} 
+  {% bootstrap_css %}
+  
+
+  <!-- Bootstrap Core CSS -->
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  
+
+  <!-- Custom Fonts -->
+
+  <link href="{% static 'css/all.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+{%endblock%}
 </head>
 
-<body>
-<div class="col-lg-5 my-auto">
-    <div class="device-container">
+<body id="page-top">
+
+  <!-- Navigation -->
+  {% if user.is_authenticated %}
+  <a class="menu-toggle rounded" href="#">{{user.username}}
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar-wrapper">
         
-<form action="{%url 'add-project'%}" method="post" enctype="multipart/form-data">
-{%csrf_token%}
+    <ul class="sidebar-nav"> 
+      <li class="sidebar-brand">
+        <a href="#page-top">Project Hub</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="{%url 'home'%}">Home</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a  href="{%url 'add-project' %}">Post Project</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a  href="{%url 'new-profile'%}">Add Profile</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a  href="{% url 'displayprofile' user.id %}">View Profile</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a  href="/accounts/password/change">Change password</a>
+      </li>
+      <li class="sidebar-nav-item">
+            <a  href=" /logout">Log out</a>
+    </li>
+    {%else%}
 
-{% bootstrap_form form%}
-<input type="submit" class="btn btn-success btn-lg" value="Post">
-</form>
+    <li class="sidebar-nav-item">
+            <a  href=" /accounts/login">Log in</a>
+    </li>
+    {%endif%}
+     
+    </ul>
+  </nav>
 
-                <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                </div>
-            </div>
-            </div>
-            </body>
-            </html>
+  <!-- Callout -->
+  <section class="callout">
+    <div class="container text-center">
+
+            <div class="col-lg-7 my-auto">
+                   
+                        
+                <form action="{%url 'add-project'%}" method="post" enctype="multipart/form-data">
+                {%csrf_token%}
+                
+                {% bootstrap_form form%}
+                <input type="submit" class="btn btn-success btn-lg" value="Post">
+                </form>
+                
+                                <div class="button">
+                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                                </div>
+                            </div>
+                            </div>
+      
+    </div>
+  </section>
+  
+
+  
+
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <ul class="list-inline mb-5">
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="#">
+            <i class="icon-social-facebook"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="#">
+            <i class="icon-social-twitter"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white" href="#">
+            <i class="icon-social-github"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="text-muted small mb-0">Copyright &copy; Project Hub 2019</p>
+    </div>
+  </footer>
+
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="{% static 'js/jquery.easing.min.js' %}"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
+
+</body>
+
+</html>
 {%endblock%}
