change background image

--- a/ratings/templates/registration/login.html
+++ b/ratings/templates/registration/login.html
@@ -38,8 +38,8 @@
 
 </head>
 
-<body id="page-top">
-
+<body style="background-image:url(../../static/img/bluepen.jpg);color: white; background-repeat: no-repeat; background-size: cover;" >
+    
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -47,7 +47,7 @@
                 <ul>
                     
                             <li>
-                                <a class='btn btn-default' href="/accounts/register">Create Account</a>
+                                <a class='btn btn-default' href="/accounts/register" style="color: white;">CREATE ACCOUNT</a>
                             </li>
                         
                     
@@ -57,13 +57,13 @@
         </div>
     </nav>
 
-    <header class="masthead">
+    <header class="masthead" >
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
                     <div class="header-content mx-auto">
-                        <h1 class="mb-5">Instatonne
-                            <hr>Showcase your beautiful photos or anything else!</h1>
+                        <h1 class="mb-5">
+                            <hr>Project hub</h1>
                         
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         </div>
                         <div class="panel-body">
                 
-                          <form  action="/accounts/login/" method="post">
+                          <form  action="/accounts/login/" method="post">       
                             {% csrf_token %}
                             {% bootstrap_form form%}
                 
@@ -110,13 +110,13 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header>    
 
   
 
     <footer>
         <div class="container">
-            <p>&copy; Instatonne Website 2020. All Rights Reserved.</p>
+            <p>&copy; Project Hub Website 2020. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li class="list-inline-item">
                     <a href="#">Privacy</a>
