--- a/ratings/templates/registration/registration_form.html
+++ b/ratings/templates/registration/registration_form.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body id="page-top" style="background-image:url(../../static/img/eXpresso.jpg);">
+<body id="page-top" style="background-image:url(../../static/img/bluepen.jpg);color: white; background-repeat: no-repeat; background-size: cover;">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -47,7 +47,7 @@
         <ul>
 
           <li>
-            <a class='btn btn-default' href="/accounts/login">Go back to Login</a>
+            <a class='btn btn-default' href="/accounts/login" style="color:white;">Go back to Login</a>
           </li>
         </ul>
       </div>
@@ -60,8 +60,8 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Instatonne
-              <hr>Showcase your beautiful photos or anything else!</h1>
+            <h1 class="mb-5">
+              <hr>Project Hub</h1>
 
           </div>
         </div>
@@ -112,7 +112,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Instatonne Website 2020. All Rights Reserved.</p>
+      <p>&copy; Project Hub Website 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
