--- a/ratings/templates/new_project.html
+++ b/ratings/templates/new_project.html
@@ -1,4 +1,3 @@
-
 {%load bootstrap4%}
 {%load static%}
 {{block.super}}
@@ -16,23 +15,24 @@
   <title>New Image</title>
   {{form.media}}
 
-  {% block styles %} 
+  {% block styles %}
   {% bootstrap_css %}
-  
+
 
   <!-- Bootstrap Core CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  
+
 
   <!-- Custom Fonts -->
 
   <link href="{% static 'css/all.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+    rel="stylesheet" type="text/css">
   <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
-{%endblock%}
+  {%endblock%}
 </head>
 
 <body id="page-top">
@@ -43,8 +43,8 @@
     <i class="fas fa-bars"></i>
   </a>
   <nav id="sidebar-wrapper">
-        
-    <ul class="sidebar-nav"> 
+
+    <ul class="sidebar-nav">
       <li class="sidebar-brand">
         <a href="#page-top">Project Hub</a>
       </li>
@@ -52,27 +52,27 @@
         <a class="js-scroll-trigger" href="{%url 'home'%}">Home</a>
       </li>
       <li class="sidebar-nav-item">
-        <a  href="{%url 'add-project' %}">Post Project</a>
+        <a href="{%url 'add-project' %}">Post Project</a>
       </li>
       <li class="sidebar-nav-item">
-        <a  href="{%url 'new-profile'%}">Add Profile</a>
+        <a href="{%url 'new-profile'%}">Add Profile</a>
       </li>
       <li class="sidebar-nav-item">
-        <a  href="{% url 'displayprofile' user.id %}">View Profile</a>
+        <a href="{% url 'displayprofile' user.id %}">View Profile</a>
       </li>
       <li class="sidebar-nav-item">
-        <a  href="/accounts/password/change">Change password</a>
+        <a href="/accounts/password/change">Change password</a>
       </li>
       <li class="sidebar-nav-item">
-            <a  href=" /logout">Log out</a>
-    </li>
-    {%else%}
+        <a href=" /logout">Log out</a>
+      </li>
+      {%else%}
 
-    <li class="sidebar-nav-item">
-            <a  href=" /accounts/login">Log in</a>
-    </li>
-    {%endif%}
-     
+      <li class="sidebar-nav-item">
+        <a href=" /accounts/login">Log in</a>
+      </li>
+      {%endif%}
+
     </ul>
   </nav>
 
@@ -80,27 +80,27 @@
   <section class="callout">
     <div class="container text-center">
 
-            <div class="col-lg-7 my-auto">
-                   
-                        
-                <form action="{%url 'add-project'%}" method="post" enctype="multipart/form-data">
-                {%csrf_token%}
-                
-                {% bootstrap_form form%}
-                <input type="submit" class="btn btn-success btn-lg" value="Post">
-                </form>
-                
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
-                            </div>
-      
+      <div class="col-lg-7 my-auto">
+
+
+        <form action="{%url 'add-project'%}" method="post" enctype="multipart/form-data">
+          {%csrf_token%}
+
+          {% bootstrap_form form%}
+          <input type="submit" class="btn btn-success btn-lg" value="Post">
+        </form>
+
+        <div class="button">
+          <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+        </div>
+      </div>
+    </div>
+
     </div>
   </section>
-  
 
-  
+
+
 
   <!-- Footer -->
   <footer class="footer text-center">
