--- a/ratings/templates/registration/login.html
+++ b/ratings/templates/registration/login.html
@@ -16,8 +16,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-  <title>Login</title>
-  {{form.media}}
+    <title>Login</title>
+    {{form.media}}
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -38,82 +38,78 @@
 
 </head>
 
-<body style="background-image:url(../../static/img/bluepen.jpg);color: white; background-repeat: no-repeat; background-size: cover;" >
-    
+<body
+    style="background-image:url(../../static/img/bluepen.jpg);color: white; background-repeat: no-repeat; background-size: cover;">
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <div class="col-sm-6 col-md-6">
                 <ul>
-                    
-                            <li>
-                                <a class='btn btn-default' href="/accounts/register" style="color: white;">CREATE ACCOUNT</a>
-                            </li>
-                        
-                    
+
+                    <li>
+                        <a class='btn btn-default' href="/accounts/register" style="color: white;">CREATE ACCOUNT</a>
+                    </li>
+
+
                 </ul>
             </div>
 
         </div>
     </nav>
-
-    <header class="masthead" >
+    <header class="masthead">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
                     <div class="header-content mx-auto">
                         <h1 class="mb-5">
                             <hr>Project hub</h1>
-                        
+
                     </div>
                 </div>
                 <div class="col-lg-5 my-auto">
                     <div class="device-container">
 
-               
-                    <!-- Empty div -->
-                   
-                      {% if form.errors %}
+
+                        <!-- Empty div -->
+
+                        {% if form.errors %}
                         <p> Password or Username is incorrect </p>
-                      {% endif %}
-                      <div class="panel panel-default">
-                
-                        <div class="panel-heading">
-                          <h3 class="text-center">LOG IN</h3>
-                        </div>
-                        <div class="panel-body">
-                
-                          <form  action="/accounts/login/" method="post">       
-                            {% csrf_token %}
-                            {% bootstrap_form form%}
-                
-                            <div class="form-group">
-                              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+                        {% endif %}
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <h3 class="text-center">LOG IN</h3>
                             </div>
-                
-                            <input type="hidden" name="next" value="{{next}}">
-                
-                          </form>
-                
+                            <div class="panel-body">
+
+                                <form action="/accounts/login/" method="post">
+                                    {% csrf_token %}
+                                    {% bootstrap_form form%}
+
+                                    <div class="form-group">
+                                        <input type="submit" class="btn btn-primary btn-sm" value="Login">
+                                    </div>
+
+                                    <input type="hidden" name="next" value="{{next}}">
+
+                                </form>
+
+                            </div>
+
                         </div>
-                
-                      </div>
-                
+
                     </div>
                     <!-- empty div -->
                     <div class="col-md-4"></div>
-                  </div>
-                  </div>
-                </div>
-               
-                    </div>
                 </div>
             </div>
         </div>
-    </header>    
-
-  
-
+        </div>
+        </div>
+        </div>
+        </div>
+    </header>
     <footer>
         <div class="container">
             <p>&copy; Project Hub Website 2020. All Rights Reserved.</p>
