--- a/ratings/templates/new_project.html
+++ b/ratings/templates/new_project.html
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Image</title>
+  <title>Add Project</title>
   {{form.media}}
 
   {% block styles %}
