--- a/ratings/templates/rate.html
+++ b/ratings/templates/rate.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Image</title>
+    <title>Rate</title>
     {{form.media}}
 
     {% block styles %}
