--- a/ratings/templates/registration/registration_form.html
+++ b/ratings/templates/registration/registration_form.html
@@ -16,7 +16,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Login</title>
+  <title>Create account</title>
   {{form.media}}
 
   <!-- Bootstrap core CSS -->
