--- a/ratings/templates/profiledisplay.html
+++ b/ratings/templates/profiledisplay.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Image</title>
+    <title>Profile</title>
     {{form.media}}
 
     {% block styles %}
@@ -157,7 +157,7 @@
         </div>
         </div>
     </header>
-    
+
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
         <i class="fas fa-angle-up"></i>
