--- a/ratings/templates/testhome.html
+++ b/ratings/templates/testhome.html
@@ -11,7 +11,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Home</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
